# Neocord

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  README.md  biome.json  bun.lockb  bunfig.toml  lefthook.yml  package.json  turbo.json
.github/: PULL_REQUEST_TEMPLATE.md  extensions.json  renovate.json  settings.json
.github/DISCUSSION_TEMPLATE/: ideas.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  docker-build.yml  quality.yml
apps/docs/: package.json
apps/web/: package.json
backend/: package.json  pyproject.toml
backend/app/: __init__.py  config.py
backend/app/api/: README.md  auth_routes.py  channel_routes.py  message_routes.py  reaction_routes.py  server_routes.py  socket_routes.py  user_routes.py
backend/app/forms/: __init__.py  channel_form.py  login_form.py  message_form.py  server_form.py  signup_form.py
backend/app/models/: __init__.py  channel.py  db.py  message.py  reaction.py  server.py  server_member.py  thread.py  threads.py  user.py
backend/app/seeds/: __init__.py  channels.py  messages.py  reactions.py  server_members.py  servers.py  threads.py  users.py
backend/migrations/: alembic.ini  env.py
backend/migrations/versions/: 20201120_150602_create_users_table.py  20241107_194348_create_servers.py  20241108_112604_create_channel.py  20241108_122927_create_message_and_threads.py  20241109_114827_add_messages_and_threads_table.py  20241109_115337_add_timestamps_to_server_table.py  20241109_120909_add_reactions_table.py  20241111_123726_add_server_members_table.py
docker/: Dockerfile  compose.base.yaml  compose.dev.yaml  compose.prod.yaml  compose.yaml
frontend/: eslint.config.js  index.html  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/components/ChannelList/: ChannelList.tsx
frontend/src/components/ChatBox/: ChatBox.css  ChatBox.tsx
frontend/src/components/ChatBox/components/: MessageItem.tsx
frontend/src/components/CreateChannelForm/: CreateChannelForm.tsx
frontend/src/components/CreateServerForm/: CreateServerForm.tsx
frontend/src/components/DeleteChannelConfirmation/: DeleteChannelConfirmation.tsx
frontend/src/components/DeleteServerConfirmation/: DeleteServerConfirmation.tsx
frontend/src/components/LandingPage/: LandingPage.tsx
frontend/src/components/LoginFormModal/: LoginFormModal.tsx
frontend/src/components/LoginFormPage/: LoginFormPage.tsx
frontend/src/components/Navigation/: Navigation.css  Navigation.tsx  OpenModalMenuItem.tsx  ProfileButton.tsx
frontend/src/components/OpenModalButton/: OpenModalButton.tsx
frontend/src/components/ServerPage/: ServerPage.tsx  mockServers.ts
frontend/src/components/ServerPage/components/: ChannelNav.tsx  EditServerSidebar.tsx  ServerLayout.tsx  ServerList.tsx
frontend/src/components/SignupFormModal/: SignupFormModal.tsx
frontend/src/components/SignupFormPage/: SignupFormPage.tsx
frontend/src/context/: Modal.tsx  useModal.ts
frontend/src/router/: Layout.tsx  index.tsx
frontend/src/store/: csrf.ts  store.ts
frontend/src/store/slices/: channelsSlice.ts  csrfSlice.ts  messagesSlice.ts  serversSlice.ts  sessionSlice.ts
frontend/src/types/: index.ts  state.ts
frontend/src/utils/: index.ts
scripts/: changelog-config.js
